--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
       }
   ],
   "require": {
-      "php": "^8.0",
-      "adminpackage/my-custom-package": "1.0.0"
+      "php": "^8.0"
   },
   "require-dev": {
       "phpunit/phpunit": "^9"
