--- a/composer.json
+++ b/composer.json
@@ -4,22 +4,23 @@
   "type": "library",
   "license": "MIT",
   "autoload": {
-      "psr-4": {
-          "MyCustomPackage\\": "src/"
-      }
+    "psr-4": {
+      "MyCustomPackage\\": "src/"
+    }
   },
   "authors": [
-      {
-          "name": "MianIbrahimKhalid",
-          "email": "ibrahimkhalid.chs@gmail.com"
-      }
+    {
+      "name": "MianIbrahimKhalid",
+      "email": "ibrahimkhalid.chs@gmail.com"
+    }
   ],
   "require": {
-      "php": "^8.0"
+    "php": "^8.0",
+    "adminpackage/my-custom-package": "^1.0@dev"
   },
   "require-dev": {
-      "phpunit/phpunit": "^9"
+    "phpunit/phpunit": "^9"
   },
   "minimum-stability": "dev",
-  "prefer-stable": true
+  "prefer-stable": false
 }
