--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,11 @@
     }
   ],
   "require": {
-    "php": "^8.0",
-    "adminpackage/my-custom-package": "^1.0@dev"
+    "php": "^8.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9"
   },
-  "minimum-stability": "dev",
-  "prefer-stable": false
+  "minimum-stability": "stable",
+  "prefer-stable": true
 }
