--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
   "require-dev": {
     "phpunit/phpunit": "^9"
   },
-  "minimum-stability": "stable",
-  "prefer-stable": false
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
