--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,13 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9"
-  }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/MianIbrahimKhalid/myCustomAdminPackage"
+    }
+  ]
 }
