--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,10 @@
       "type": "vcs",
       "url": "https://github.com/MianIbrahimKhalid/myCustomAdminPackage"
     }
-  ]
+  ],
+  "extra": {
+    "branch-alias": {
+      "dev-main": "dev-master"
+    }
+  }
 }
