--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     }
   ],
   "require": {
-    "php": "^8.0",
-    "adminpackage/my-custom-package": "dev-main"
+    "php": "^8.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9"
@@ -31,7 +30,7 @@
   ],
   "extra": {
     "branch-alias": {
-      "dev-main": "dev-master"
+      "dev-main": "dev-main"
     }
   }
 }
